MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()
SUBDIRLIST(SUBDIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
foreach(SUBDIR ${SUBDIR_LIST})
    add_subdirectory(${SUBDIR})
endforeach()

